php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36644 problem with function variant_date_from_timestamp
Submitted: 2006-03-07 13:13 UTC Modified: 2006-11-13 15:36 UTC
Votes:3
Avg. Score:4.7 ± 0.5
Reproduced:3 of 3 (100.0%)
Same Version:1 (33.3%)
Same OS:0 (0.0%)
From: u_peg at centrum dot cz Assigned:
Status: Closed Package: COM related
PHP Version: 5.1.2 OS: Windows 2003
Private report: No CVE-ID: None
 [2006-03-07 13:13 UTC] u_peg at centrum dot cz
Description:
------------
If I use negative number as argument of function variant_date_frome_timestamp php crashes.

Reproduce code:
---------------
variant_date_from_timestamp(-1);

Expected result:
----------------
I expected regular variant date representing one second to 1.1.1970 (December 31 1969 23:59:59).



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-11-13 15:36 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC