Fixed bug #36644 (possible crash in variant_date_from_timestamp()).